# pointcloud_to_occupancy_grid

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.xml
config/: default.yaml
include/pointcloud_to_occupancy_grid/: dataset_io.hpp  grid_data.hpp  map_export.hpp  occupancy_map.hpp  offline_map_builder.hpp  subgrid.hpp  types.hpp
launch/: start.launch.py
src/: dataset_io.cpp  generate_pgm_from_keyframes.cpp  map_export.cpp  occupancy_map.cpp  offline_map_builder.cpp  subgrid.cpp
